# compliance-document-intelligence

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_FOR_ME.md  docker-compose.yml  pyproject.toml  requirements.txt
data/raw/: compliance_seed.jsonl
notebooks/: testing.ipynb
notebooks/parts/: 01_setup.py  02_classification_ner.py  03_qa_eval.py
scripts/: evaluate.py  push_to_github.ps1  push_to_hf.ps1  run_demo.py  run_sota_benchmark.py  train.py
src/compliance_llm/: config.py  schemas.py
src/compliance_llm/api/: main.py
src/compliance_llm/data/: chunking.py  ingestion.py
src/compliance_llm/governance/: audit.py  model_card.py
src/compliance_llm/models/: advanced_classifier.py  advanced_ner.py  classifier.py  ner.py  risk.py
src/compliance_llm/pipeline/: evaluation.py  inference.py  training.py
src/compliance_llm/rag/: dense_retriever.py  qa_llm.py  retriever.py
tests/: test_api.py  test_chunking.py  test_risk.py
